# pedroboucanova_pari2017

./: .gitignore  CMakeLists.txt  README.md
src/: #mydr2.glade#  callbacks.c  main.c  myf.c  myf.h  prototypes.h
